--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fresh Meal</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>   
-    <link rel="stylesheet" href="C:\Users\Elev\Desktop\trial\sarvani\shopping\images\style.css">
+    <link rel="stylesheet" href="style.css">
      
 </head>
 <body>
