--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="C:\Users\Elev\Desktop\trial\sarvani\shopping\images\app.js.js"></script>
+    <script src="app.js.js"></script>
     
 </body>
 </html>
